--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,11 @@
     <title><%= title%></title>
 </head>
 <body>
+
+    <%- include('partials/navigation')%>
+
     <h1>Hello World</h1>
+
+    <%- include('partials/footer')%>
 </body>
 </html>
