--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -6,6 +6,9 @@
     <title><%= title%></title>
 </head>
 <body>
+
+    <%- include('partials/navigation')%>
+    
     <h1>Contact</h1>
 </body>
 </html>
