--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('partials/head')%>
     <title><%= title%></title>
 </head>
 <body>
 
     <%- include('partials/navigation')%>
 
+    <!-- Main -->
     <h1>Hello World</h1>
 
     <%- include('partials/footer')%>
